# python-fastapi-uv-example

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml
app/: main.py
